Admin page gap fixed

--- a/public/stylesheets/admin/admin.css
+++ b/public/stylesheets/admin/admin.css
@@ -445,15 +445,6 @@
   color: red;
 }
 
-.modal_12 .modal_main {
-  width: 700px;
-  padding: 10px;
-}
-
-.modal_12 .modal_main .message_header {
-  text-align: center;
-}
-
 .loading_wrapper {
   position: fixed;
   height: 100vh;
